--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -3,7 +3,7 @@ header {
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     background-color: orange; /* Replace with your chosen color */
     margin-top: 120px; /* Adjust based on the height of your nav bar */
@@ -22,4 +22,12 @@ header {
 .name-container {
     text-align: center;
     margin-top: 10px; /* Adjust spacing between avatar and name as needed */
+    
+}   
+
+main {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
 }
