--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,13 +1,4 @@
-header {
-    height: 400px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    background-color: orange; /* Replace with your chosen color */
-    margin-top: 120px; /* Adjust based on the height of your nav bar */
-}
+
 
 .avatar-container {
     display: flex;
@@ -15,19 +6,10 @@ header {
     align-items: center;
 }
 
-.avatar-container img {
-    /* Style your avatar image as needed, e.g., size, border-radius for circular shape, etc. */
-}
-
 .name-container {
     text-align: center;
-    margin-top: 10px; /* Adjust spacing between avatar and name as needed */
+    margin-top: 1%; /* Adjust spacing between avatar and name as needed */
+    
     
 }   
 
-main {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 100%;
-}
